--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
+    "scribe.js-ocr": "^0.8.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
