--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/sala-da-ana-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/sala-da-ana-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
