feat - Adicionar configurações para PWA, incluindo novos ícones no manifest e melhorias no registro do Service Worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,18 +7,19 @@
   "background_color": "#ffffff",
   "theme_color": "#1976d2",
   "orientation": "portrait-primary",
+  "scope": "/",
   "icons": [
     {
-      "src": "/sala-da-ana-192x192.png",
+      "src": "/sala-da-ana-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/sala-da-ana-512x512.png",
+      "src": "/sala-da-ana-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any maskable"
     }
   ]
 } 
